// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Render button correctly 1`] = `
<button
  class="btn btn-primary d-inline-flex justify-content-center align-items-center"
  type="button"
>
  <span>
    Test Button
  </span>
</button>
`;

exports[`<Button /> Render button with custom classes 1`] = `
<button
  class="btn one two three d-inline-flex justify-content-center align-items-center"
  type="button"
>
  <span>
    Test Button
  </span>
</button>
`;

exports[`<Button /> Render button with spinner 1`] = `
<button
  class="btn btn-primary d-inline-flex justify-content-center align-items-center"
  type="button"
>
  <span
    aria-hidden="true"
    class="spinner-border spinner-border-sm me-1"
    role="status"
  />
  <span>
    Test Button
  </span>
</button>
`;
